fixed overflow

--- a/src/components/dashboard.css
+++ b/src/components/dashboard.css
@@ -11,6 +11,7 @@
     justify-content: space-evenly;
     padding-top: 15px;
     padding-bottom: 15px;
+    overflow-x: hidden;
 
 }
 .menu-bar-h{
